2007-05-26 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Support for right-hand axis
        * plotaxis.tcl: Support for right-hand axis, tickmarks
        * plot3d.tcl: Draw tickmarks at 3D axes
        * scaling.tcl: Suppress testing output (time axis)

2007-05-14 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added an interval and a trend method for XY plots
        * plotpriv.tcl: Implementation of the interval and trend methods
        * plotdemo1.tcl: Examples of these methods

2007-05-03 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotpriv.tcl: Expanded the saveplot method (other file formats
                        than PostScript via Img)

2007-04-30 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added radial chart
        * plotpriv.tcl:  Added routines for radial chart
        * plotchart.man: Description of radial chart
        * plotchart.test: Test for such charts
        * plotdemos4.tcl: New set of demos - 3D bars and radial charts
        * plotdemos5.tcl: New set of demos - contour plots

2007-04-29 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added balloon text
        * plotchart.man: Description of balloon text
        * plotchart.test: Test for balloon text and Gantt chart
        * plotannot.tcl: File with procedures for annotations

2007-04-17 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added 3D barchart
        * plotchart.man: Description of 3D barchart
        * plotbusiness.tcl: File with procedures for business-type charts

2007-02-10 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Description of legend commands
        * plotchart.tcl: Raised version to 1.2
        * pkgIndext.tcl: Raised version to 1.2

        * Still to do:
          - draw integer numbers, if the axis numbers _are_ integer
          - add a facility for displaying balloon text
